# multiproto

./: multiproto.cabal
src/Data/MultiProto/: Protobuf.hs
src/Data/MultiProto/Protobuf/: Decoder.hs  Encoder.hs  Example.hs  Parser.hs  TH.hs
test/Data/MultiProto/Protobuf/: DecoderSpec.hs  EncoderSpec.hs  ParserSpec.hs
