name:                multiproto
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  test/examples/AddressBook.proto

library
  exposed-modules:
    Data.MultiProto.Protobuf.Decoder
    Data.MultiProto.Protobuf.Encoder
    Data.MultiProto.Protobuf.Example
    Data.MultiProto.Protobuf.Parser
    Data.MultiProto.Protobuf.TH
  build-depends:
    base >= 4.7 && < 4.8,
    attoparsec,
    binary-literal-qq,
    bytestring,
    cereal,
    data-default,
    semigroups,
    template-haskell
  hs-source-dirs: src/
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell
    ViewPatterns

test-suite test
  hs-source-dirs: test
  main-is: Spec.hs
  default-extensions: OverloadedStrings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:
    base == 4.*,
    Cabal >= 1.16.0,
    attoparsec,
    bytestring,
    cereal,
    multiproto,
    hspec
  GHC-options: -Wall -Werror

